--- a/app/globals.css
+++ b/app/globals.css
@@ -10,6 +10,19 @@ body {
   overflow-x: hidden;
 }
 
+a {
+  color: white;
+  text-decoration: none;
+}
+
+/* .main{
+  background-color: rgb(238, 242, 246);
+  min-height: calc(100vh - 88px);
+  padding: 20px;
+  flex-grow: 1;
+  margin-top: 80px;
+} */
+
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
